物体検出学習中

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["dataframe", "Gemba", "streamlit"]
+  "cSpell.words": [
+    "computervision",
+    "dataframe",
+    "Gemba",
+    "imageanalysis",
+    "streamlit"
+  ]
 }
